  (Matthew Ryan, review by Florian Angeletti)

- #10189, #10190, #10347: Universal variables leaking through GADT equations
  (Jacques Garrigue, report and review by Leo White)

- #10253, #10373: tweak error message for unknown variant constructors
  or record fields in type-directed disambiguation
  (Florian Angeletti, report by Hongbo Zhang, review by Gabriel Scherer)

- #10277: Need to detect ambiguity recursively inside types
  (Jacques Garrigue, review by Thomas Refis and Leo White)

- #10283, #10284: Enforce right-to-left evaluation order for Lstaticraise
  (Vincent Laviron, report by Github user Ngoguey42, review by Gabriel Scherer)

- #10298, #10305: Incorrect propagation of type equalities in functor
  application
  (Jacques Garrigue, report and review by Didier Remy)

- #10324, #10325: Prevent generation of Lsend(Cached, _) in bytecode
  (Vincent Laviron, report by Yawar Amin and Nicolás Ojeda Bär, review by
   Jacques Garrigue)

- #10338, #10340: Translcore.push_defaults does not respect scoping
  (Jacques Garrigue, report and review by Stephen Dolan)

- #10351: Fix DLL loading with binutils 2.36+ on mingw-w64
  (David Allsopp, review by Nicolás Ojeda Bär)

- #10339, #10354: Fix handling of exception-raising specific
   operations during spilling.  (This bug affects ARM and ARM64.)
   In passing, refactor Proc.op_is_pure and Mach.operation_can_raise.
  (Xavier Leroy, report by Richard Bornat, review by Stephen Dolan)

- #10371: no longer generatd useless `.cds` file when using
  `-output-complete-exe`.
  (Nicolás Ojeda Bär, review by David Allsopp)

- #10376: Link runtime libraries correctly on msvc64 in -output-complete-obj
  (David Allsopp, review by Gabriel Scherer)

OCaml 4.12.0 (24 February 2021)
-------------------------------

### Supported platforms (highlights):

- #9699: add support for iOS and macOS on ARM 64 bits
  (Eduardo Rafael, review by Xavier Leroy, Nicolás Ojeda Bär
   and Anil Madhavapeddy, additional testing by Michael Schmidt)
